--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -9,7 +9,7 @@
           integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w=="
           crossorigin="anonymous" referrerpolicy="no-referrer" />
 
-    <script th:src="@{/js/menuizquierdo.js}"></script>
+    <!-- <script th:src="@{/js/menuizquierdo.js}"></script> -->
     <!--<script th:src="@{/js/slider.js}"></script> -->
 
 </head>
