--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -3,7 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <title>Futbol Nostalgic</title>
+
+    <link rel="stylesheet" th:href="@{/css/footer.css}">
     <link rel="stylesheet" th:href="@{/css/style.css}">
+
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
           integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w=="
@@ -17,43 +20,8 @@
 
     <header th:replace="~{menus/mismenus}"></header>
     <section th:replace="~{sliders/slider}"></section>
+    <section th:replace="~{productos/product}"></section>
+    <footer th:replace="~{footers/footer}"></footer>
 
-
-<!--
-    <footer>
-
-        <div class="container">
-
-            <div class="foo-row">
-                <div class="foo-col">
-                    <h2>Suscríbete <br>a nuestro newsletter</h2>
-                    <form action="" method="GET">
-
-                        <div class="f-input">
-                            <input type="text" placeholder="Ingrese su correo">
-                            <button type="submit" class="hm-btn-round btn-primary"><i class="far fa-paper-plane"></i></button>
-                        </div>
-                    </form>
-
-                </div>
-
-                <div class="foo-col">
-                    <ul>
-                        <li><a href="http://">Productos</a></li>
-                        <li><a href="http://">Campañas</a></li>
-                        <li><a href="http://">Nosotros</a></li>
-                        <li><a href="http://">Contacto</a></li>
-                        <li><a href="http://">Enlace 01</a></li>
-                        <li><a href="http://">Enlace 02</a></li>
-                        <li><a href="http://">Enlace 03</a></li>
-                    </ul>
-                </div>
-
-            </div>
-
-        </div>
-
-    </footer>
--->
 </body>
 </html>
