--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -1,6 +1,7 @@
 body{
     background-color: #cfab5f;
     font-family: sans-serif;
+    margin: 0;
 }
 
 /**************** MenuDerecha ****************/
@@ -110,8 +111,8 @@ body{
 
 .slider {
     display: flex;
-    width: 400%;
-    height: 450px;
+    width: 500%;
+    height: 650px;
     margin-left: -100%;
     position: relative;
 }
@@ -194,9 +195,14 @@ body{
 }
 
 /**************** productos  ****************/
+.titulop{
+    padding-left: 10px;
+    display: flex;
+    justify-content: center
+}
 
 .cajas{
-    width: calc(32.93% - 40px);
+    width: calc(32.6% - 40px);
     margin: auto;
     margin-top: 25px;
     height: auto;
@@ -212,6 +218,10 @@ body{
     justify-content: center;
 }
 
+.imagenes{
+    width: 100%;
+}
+
 .titulo{
     padding-left: 10px;
 }
@@ -221,7 +231,7 @@ body{
 }
 
 .buttonp {
-    width: 8em;
+    width: 25%;
     height: 3em;
     border-radius: 30em;
     font-size: 15px;
@@ -305,5 +315,73 @@ body{
 
     100% {
         transform: translate3d(0, 0, 0) translateZ(0);
+    }
+}
+
+/**************** footer ****************/
+
+.pie-pagina{
+    width: 100%;
+    background-color: #26272b;
+    margin-top: 25px;
+}
+.pie-pagina .grupo-1{
+    width: 100%;
+    max-width: 1200px;
+    margin: auto;
+    display:grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-gap:50px;
+    padding: 45px 0px;
+}
+.pie-pagina .grupo-1 .box figure{
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.pie-pagina .grupo-1 .box figure img{
+    width: 40%;
+}
+.pie-pagina .grupo-1 .box h2{
+    color: #fff;
+    margin-bottom: 25px;
+    font-size: 20px;
+}
+.pie-pagina .grupo-1 .box p{
+    color: #efefef;
+    margin-bottom: 10px;
+}
+.pie-pagina .grupo-1 .red-social a{
+    display: inline-block;
+    text-decoration: none;
+    width: 45px;
+    height: 45px;
+    line-height: 45px;
+    color: #fff;
+    margin-right: 10px;
+    background-color: #121214;
+    text-align: center;
+    transition: all 300ms ease;
+}
+.pie-pagina .grupo-1 .red-social a:hover{
+    color: white;
+}
+.pie-pagina .grupo-2 { /* parte de bajo */
+    background-color: #121214;
+    padding: 15px 10px;
+    text-align: center;
+    color: #fff;
+}
+.pie-pagina .grupo-2 small{
+    font-size: 15px;
+}
+@media screen and (max-width:800px){
+    .pie-pagina .grupo-1{
+        width: 90%;
+        grid-template-columns: repeat(1, 1fr);
+        grid-gap:30px;
+        padding: 35px 0px;
     }
 }
