--- a/src/main/resources/templates/sliders/slider.html
+++ b/src/main/resources/templates/sliders/slider.html
@@ -3,10 +3,18 @@
   <div class="slider" id="slider">
 
     <div class="slider__section">
-      <img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.transfermarkt.es%2Froberto-baggio%2Fprofil%2Fspieler%2F4153&psig=AOvVaw3TV-3BtzAZsKK3mRa9vRtF&ust=1675277716505000&source=images&cd=vfe&ved=0CBAQjRxqFwoTCOjQofu98vwCFQAAAAAdAAAAABAJ"
-           alt="" class="slider__img">
+      <img src="/img/cruyff.jpg" alt="" class="slider__img">
       <div class="slider__content">
-        <h2 class="slider__title">Baggio</h2>
+        <h2 class="slider__title">Johan Cruyff</h2>
+        <p class="slider__txt">Camisetas Oficiales de Holanda de los años x.</p>
+        <a href="" class="btn-shop">COMPRAR AHORA</a>
+      </div>
+    </div>
+
+    <div class="slider__section">
+      <img src="/img/robertobaggio.jpg" alt="" class="slider__img">
+      <div class="slider__content">
+        <h2 class="slider__title">Roberto Baggio</h2>
         <p class="slider__txt">Camisetas Oficiales de Italia de los años x.</p>
         <a href="" class="btn-shop">COMPRAR AHORA</a>
       </div>
