--- a/src/main/resources/templates/sliders/slider.html
+++ b/src/main/resources/templates/sliders/slider.html
@@ -3,6 +3,15 @@
   <div class="slider" id="slider">
 
     <div class="slider__section">
+      <img src="/img/figo.jpeg" alt="" class="slider__img">
+      <div class="slider__content">
+        <h2 class="slider__title">Luis Figo</h2>
+        <p class="slider__txt">Camisetas Oficiales de Portugal de los años x.</p>
+        <a href="" class="btn-shop">COMPRAR AHORA</a>
+      </div>
+    </div>
+
+    <div class="slider__section">
       <img src="/img/cruyff.jpg" alt="" class="slider__img">
       <div class="slider__content">
         <h2 class="slider__title">Johan Cruyff</h2>
