--- a/src/main/resources/templates/sliders/slider.html
+++ b/src/main/resources/templates/sliders/slider.html
@@ -12,6 +12,15 @@
     </div>
 
     <div class="slider__section">
+      <img src="/img/maradona.jpeg" alt="" class="slider__img">
+      <div class="slider__content">
+        <h2 class="slider__title">Diego Armando Maradona</h2>
+        <p class="slider__txt">Camisetas Oficiales de Argentina de los años x.</p>
+        <a href="" class="btn-shop">COMPRAR AHORA</a>
+      </div>
+    </div>
+
+    <div class="slider__section">
       <img src="/img/cruyff.jpg" alt="" class="slider__img">
       <div class="slider__content">
         <h2 class="slider__title">Johan Cruyff</h2>
