--- a/src/main/resources/templates/login/login.html
+++ b/src/main/resources/templates/login/login.html
@@ -2,13 +2,18 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Iniciar Sesion en Futbol Nostalgic</title>
+  <title>Iniciar Sesion Futbol Nostalgic</title>
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700" rel="stylesheet">
   <link rel="stylesheet" th:href="@{/css/login.css}">
 
 </head>
 
 <body class="align">
+<header>
+
+  <!-- <a href="../index.html">X</a>  PONER UNA FLECHA PARA VOLVER A LA PRINCIPAL -->
+
+</header>
 
 <div class="grid">
   <form action="#" method="#" class="form login">
