--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -234,7 +234,7 @@ body{
     width: 25%;
     height: 3em;
     border-radius: 30em;
-    font-size: 15px;
+    font-size: 8pt;
     font-family: inherit;
     border: none;
     position: relative;
