--- a/src/main/resources/templates/menus/menuderecha/derecha.html
+++ b/src/main/resources/templates/menus/menuderecha/derecha.html
@@ -5,8 +5,8 @@
   <a class="derecha" href="#">Cesta</a>
 </nav>
 
-<!-- <a class="navbar-brand" href="../../index.html">
-  <img src="/img/logo.jpeg" alt="">
+<!-- <a class="logo">
+  <img src="/img/logo.jpeg" width="5%">
 </a> -->
 
 
