--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -6,12 +6,22 @@ body{
 
 /**************** MenuDerecha ****************/
 
+.logo{
+    padding: 20px;
+}
+
 .rightNav{
-    padding: 19px;
     display: flex;
+    list-style: none;
+    background-color: #cfab5f;
+    position:fixed;
     justify-content: end;
     align-content: center;
-    margin: auto;
+    padding: 19px;
+    top: 0;
+    right: 0;
+    left: 0;
+    z-index: 10000;
 }
 
 .derecha {
@@ -231,10 +241,10 @@ body{
 }
 
 .buttonp {
-    width: 25%;
+    width: 22.5%;
     height: 3em;
     border-radius: 30em;
-    font-size: 8pt;
+    font-size: 8.5pt;
     font-family: inherit;
     border: none;
     position: relative;
