--- a/src/main/resources/templates/sliders/slider.html
+++ b/src/main/resources/templates/sliders/slider.html
@@ -6,7 +6,7 @@
       <img src="/img/figo.jpeg" alt="" class="slider__img">
       <div class="slider__content">
         <h2 class="slider__title">Luis Figo</h2>
-        <p class="slider__txt">Camisetas Oficiales de Portugal de los años x.</p>
+        <p class="slider__txt">Camisetas Oficiales de Portugal de los años 2000.</p>
         <a href="" class="btn-shop">COMPRAR AHORA</a>
       </div>
     </div>
@@ -15,7 +15,7 @@
       <img src="/img/maradona.jpeg" alt="" class="slider__img">
       <div class="slider__content">
         <h2 class="slider__title">Diego Armando Maradona</h2>
-        <p class="slider__txt">Camisetas Oficiales de Argentina de los años x.</p>
+        <p class="slider__txt">Camisetas Oficiales de Argentina de los años 80.</p>
         <a href="" class="btn-shop">COMPRAR AHORA</a>
       </div>
     </div>
@@ -24,7 +24,7 @@
       <img src="/img/cruyff.jpg" alt="" class="slider__img">
       <div class="slider__content">
         <h2 class="slider__title">Johan Cruyff</h2>
-        <p class="slider__txt">Camisetas Oficiales de Holanda de los años x.</p>
+        <p class="slider__txt">Camisetas Oficiales de Holanda de los años 70.</p>
         <a href="" class="btn-shop">COMPRAR AHORA</a>
       </div>
     </div>
@@ -33,7 +33,7 @@
       <img src="/img/robertobaggio.jpg" alt="" class="slider__img">
       <div class="slider__content">
         <h2 class="slider__title">Roberto Baggio</h2>
-        <p class="slider__txt">Camisetas Oficiales de Italia de los años x.</p>
+        <p class="slider__txt">Camisetas Oficiales de Italia de los años 90.</p>
         <a href="" class="btn-shop">COMPRAR AHORA</a>
       </div>
     </div>
