--- a/src/main/resources/templates/login/registrar.html
+++ b/src/main/resources/templates/login/registrar.html
@@ -9,47 +9,57 @@
 </head>
 
 <body class="align">
-<header>
-
-  <!-- <a href="../index.html">X</a>  PONER UNA FLECHA PARA VOLVER A LA PRINCIPAL -->
-
-
-</header>
 
 <h1>Registrate</h1>
 
 <div class="grid">
-  <form action="#" method="#" class="form login">
+  <form method="post" role="form" th:action="@{/register/save}" th:object="${user}" class="form login">
     <div class="form__field">
       <label for="login__username">
-        <svg class="icon"><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#user"></use></svg>
-        <span class="hidden">Username</span></label>
+        <svg class="icon">
+          <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#user"></use>
+        </svg>
+        <span class="hidden">Username</span>
+      </label>
       <input id="login__username" type="text" name="username" class="form__input" placeholder="Nombre" required>
     </div>
     <div class="form__field">
       <label for="login__username">
-        <svg class="icon"><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#user"></use></svg>
-        <span class="hidden">Username</span></label>
+        <svg class="icon">
+          <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#user"></use>
+        </svg>
+        <span class="hidden">Username</span>
+      </label>
       <input id="login__correo" type="text" name="username" class="form__input" placeholder="Correo Electronico" required>
     </div>
     <div class="form__field">
-      <label for="login__password"><svg class="icon"><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#lock"></use></svg>
-        <span class="hidden">Password</span></label>
+      <label for="login__password">
+        <svg class="icon">
+          <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#lock"></use>
+        </svg>
+        <span class="hidden">Password</span>
+      </label>
       <input id="login__password" type="password" name="password" class="form__input" placeholder="Password" required>
     </div>
 
     <div class="form__field">
       <input type="submit" value="Registrar">
-    </div>
-
-    <div th:if${param.exito}>
-      <div class="alert alert-info">
-        Se ha registrado exitosamente a la aplicacion.
+      <!--<div th:if${param.success}>
+        <div class="alert alert-info">
+          Se ha registrado exitosamente a la aplicacion.
+        </div> -->
       </div>
     </div>
 
+
+
   </form>
-  <p class="text--center">Si ya estas registrado <a href="/login">Inicia Sesion aqui.</a> <svg class="icon"><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="assets/images/icons.svg#arrow-right"></use></svg></p>
+  <p class="text--center">Si ya estas registrado
+    <a href="/login">Inicia Sesion aqui.</a>
+    <svg class="icon">
+      <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="assets/images/icons.svg#arrow-right"></use>
+    </svg>
+  </p>
 </div>
 
 <svg xmlns="http://www.w3.org/2000/svg" class="icons">
@@ -61,7 +71,8 @@
   </symbol>
   <symbol id="user" viewBox="0 0 1792 1792">
     <path d="M1600 1405q0 120-73 189.5t-194 69.5H459q-121 0-194-69.5T192 1405q0-53 3.5-103.5t14-109T236 1084t43-97.5 62-81 85.5-53.5T538 832q9 0 42 21.5t74.5 48 108 48T896 971t133.5-21.5 108-48 74.5-48 42-21.5q61 0 111.5 20t85.5 53.5 62 81 43 97.5 26.5 108.5 14 109 3.5 103.5zm-320-893q0 159-112.5 271.5T896 896 624.5 783.5 512 512t112.5-271.5T896 128t271.5 112.5T1280 512z" />
-  </symbol></svg>
+  </symbol>
+</svg>
 
 </body>
 </html>
