--- a/src/main/resources/templates/menus/menuderecha/derecha.html
+++ b/src/main/resources/templates/menus/menuderecha/derecha.html
@@ -1,6 +1,6 @@
 <nav class="rightNav">
   <a class="derecha" href="/login">Acceder</a>
-  <a class="derecha" href="/registrar">Regístrate</a>
+  <a class="derecha" href="/register">Regístrate</a>
   <a class="derecha" href="#">Ayuda</a>
   <a class="derecha" href="#">Cesta</a>
 </nav>
