--- a/src/main/resources/templates/footers/footer.html
+++ b/src/main/resources/templates/footers/footer.html
@@ -11,8 +11,9 @@
 
     <div class="box">
       <h2>SOBRE NOSOTROS</h2>
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio, ipsa?</p>
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio, ipsa?</p>
+      <p>Somos una empresa pionera en ropa futbolistica vintage, con un amplio catalogo de camisetas de selecciones de la epoca.</p>
+      <br>
+      <p>ENVÍO GRATUITO: NACIONAL A PARTIR DE 100€ | INTERNACIONAL A PARTIR DE 200€</p>
     </div>
 
     <div class="box">
