--- a/src/main/resources/templates/login/registrar.html
+++ b/src/main/resources/templates/login/registrar.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Iniciar Sesion Futbol Nostalgic</title>
+  <title>Registrarse Futbol Nostalgic</title>
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700" rel="stylesheet">
   <link rel="stylesheet" th:href="@{/css/login.css}">
 
@@ -12,48 +12,51 @@
 
 <h1>Registrate</h1>
 
+<!--<div th:if${param.success}>
+      <div class="alert alert-info">
+        Se ha registrado exitosamente.
+      </div>
+</div>-->
+
 <div class="grid">
 
-  <form id="registerform" th:action="@{/process_register}" th:object="${user}" method="POST" role="form" class="form login">
+  <form id="registerform" th:action="@{/processregister}" th:object="${usuario}"
+        method="POST" role="form" class="form login">
 
     <div class="form__field">
-      <label for="login__username">
+      <label for="register__username">
         <svg class="icon">
           <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#user"></use>
         </svg>
         <span class="hidden">Username</span>
       </label>
-      <input id="login__username" type="text" name="username" class="form__input" placeholder="Nombre" required>
+      <input id="register__username" type="text" name="username" class="form__input"
+             th:field="*{nombre}" placeholder="Nombre" required>
     </div>
     <div class="form__field">
-      <label for="login__username">
+      <label for="register__username">
         <svg class="icon">
           <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#user"></use>
         </svg>
         <span class="hidden">Username</span>
       </label>
-      <input id="login__correo" type="text" name="username" class="form__input" placeholder="Correo Electronico" required>
+      <input id="register__correo" type="text" name="username" class="form__input"
+             th:field="*{email}" placeholder="Correo Electronico" required>
     </div>
     <div class="form__field">
-      <label for="login__password">
+      <label for="register__password">
         <svg class="icon">
           <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#lock"></use>
         </svg>
         <span class="hidden">Password</span>
       </label>
-      <input id="login__password" type="password" name="password" class="form__input" placeholder="Password" required>
+      <input id="register__password" type="password" name="password" class="form__input"
+             th:field="*{password}" placeholder="Password" required>
     </div>
 
     <div class="form__field">
       <input type="submit" value="Registrar">
-      <!--<div th:if${param.success}>
-        <div class="alert alert-info">
-          Se ha registrado exitosamente a la aplicacion.
-        </div> -->
-      </div>
     </div>
-
-
 
   </form>
   <p class="text--center">Si ya estas registrado
