--- a/src/main/resources/templates/menus/menuderecha/derecha.html
+++ b/src/main/resources/templates/menus/menuderecha/derecha.html
@@ -1,12 +1,10 @@
 <nav class="rightNav">
   <a class="derecha" href="/login">Acceder</a>
-  <a class="derecha" href="/register">Regístrate</a>
-  <a class="derecha" href="#">Ayuda</a>
+  <a class="derecha" href="/registrar">Regístrate</a>
+  <a class="derecha" href="https://www.programacontexto.org/pide-ayuda/">Ayuda</a>
   <a class="derecha" href="#">Cesta</a>
 </nav>
 
 <!-- <a class="logo">
   <img src="/img/logo.jpeg" width="5%">
 </a> -->
-
-
