--- a/src/main/resources/templates/sliders/slider.html
+++ b/src/main/resources/templates/sliders/slider.html
@@ -7,7 +7,7 @@
       <div class="slider__content">
         <h2 class="slider__title">Luis Figo</h2>
         <p class="slider__txt">Camisetas Oficiales de Portugal de los años 2000.</p>
-        <a href="" class="btn-shop">COMPRAR AHORA</a>
+        <!--<a href="" class="btn-shop">COMPRAR AHORA</a> -->
       </div>
     </div>
 
@@ -16,7 +16,7 @@
       <div class="slider__content">
         <h2 class="slider__title">Diego Armando Maradona</h2>
         <p class="slider__txt">Camisetas Oficiales de Argentina de los años 80.</p>
-        <a href="" class="btn-shop">COMPRAR AHORA</a>
+        <!--<a href="" class="btn-shop">COMPRAR AHORA</a> -->
       </div>
     </div>
 
@@ -25,7 +25,7 @@
       <div class="slider__content">
         <h2 class="slider__title">Johan Cruyff</h2>
         <p class="slider__txt">Camisetas Oficiales de Holanda de los años 70.</p>
-        <a href="" class="btn-shop">COMPRAR AHORA</a>
+        <!--<a href="" class="btn-shop">COMPRAR AHORA</a> -->
       </div>
     </div>
 
@@ -34,7 +34,7 @@
       <div class="slider__content">
         <h2 class="slider__title">Roberto Baggio</h2>
         <p class="slider__txt">Camisetas Oficiales de Italia de los años 90.</p>
-        <a href="" class="btn-shop">COMPRAR AHORA</a>
+        <!--<a href="" class="btn-shop">COMPRAR AHORA</a> -->
       </div>
     </div>
 
@@ -43,7 +43,7 @@
       <div class="slider__content">
         <h2 class="slider__title">Pelé</h2>
         <p class="slider__txt">Camisetas Oficiales de Brasil de los años 60.</p>
-        <a href="" class="btn-shop">COMPRAR AHORA</a>
+        <!--<a href="" class="btn-shop">COMPRAR AHORA</a> -->
       </div>
     </div>
 
@@ -52,7 +52,7 @@
       <div class="slider__content">
         <h2 class="slider__title">David Beckham</h2>
         <p class="slider__txt">Camisetas Oficiales de Inglaterra de los años 2000.</p>
-        <a href="" class="btn-shop">COMPRAR AHORA</a>
+        <!--<a href="" class="btn-shop">COMPRAR AHORA</a> -->
       </div>
     </div>
 
@@ -61,7 +61,7 @@
       <div class="slider__content">
         <h2 class="slider__title">Emilio Butragueño</h2>
         <p class="slider__txt">Camisetas Oficiales de España de los años 80.</p>
-        <a href="" class="btn-shop">COMPRAR AHORA</a>
+        <!--<a href="" class="btn-shop">COMPRAR AHORA</a> -->
       </div>
     </div>
 
@@ -70,7 +70,7 @@
       <div class="slider__content">
         <h2 class="slider__title">Zinedine Zidane</h2>
         <p class="slider__txt">Camisetas Oficiales de Francia de los años 90.</p>
-        <a href="" class="btn-shop">COMPRAR AHORA</a>
+        <!--<a href="" class="btn-shop">COMPRAR AHORA</a> -->
       </div>
     </div>
 
